# quinn-diff

./: AUTHORS  ChangeLog  ChangeLog.old  Makefile.am  Makefile.in  NEWS  Packages-arch-specific  README  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.ac
debian/: changelog  conffiles  control  copyright  distfiles  docs  examples  rules
doc/: Makefile.am  Makefile.in  README.silly-names  distfiles  quinn-diff.1  quinn-diff.1.sgml
example_scripts/: ChangeLog  Makefile.am  distfiles  foo.bc  foo.sh  junk.sh  quinn-diff_sort_by_priority  quinn-diff_sort_by_section  snarf_Packages-primary  snarf_Packages-secondary  snarf_Packages-source
src/: ChangeLog  Makefile.am  Makefile.in  arch_specific.c  arch_specific.h  common.h  error.c  error.h  getopt.c  globals.h  init.c  init.h  list.c  list.h  main.c  nfmalloc.c  nfmalloc.h  output.c  output.h  parse_packages.c  parse_packages.h  parse_sources.c  parse_sources.h  utils.c  utils.h  vercmp.c  vercmp.h  xmalloc.c  xmalloc.h
