bin_PROGRAMS = quinn-diff
quinn_diff_SOURCES = error.c nfmalloc.c xmalloc.c getopt.c getopt1.c init.c list.c arch_specific.c vercmp.c output.c utils.c parse_sources.c parse_packages.c main.c arch_specific.h common.h error.h getopt.h init.h list.h nfmalloc.h output.h parse_sources.h parse_packages.h utils.h vercmp.h xmalloc.h globals.h
quinn_diff_LDADD = @EFENCE@ @CCMALLOC@ @GLIB_LIBS@
AM_CFLAGS = @GLIB_CFLAGS@
